--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
               <h1>Cover your page.</h1>
               <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
               <p class="lead">
-                <a href="#" class="btn btn-lg btn-secondary fw-bold border-white bg-white">Learn more</a>
+                <a href="#" class="btn btn-lg btn-secondary fw-bold border-white text-dark bg-white">Learn more</a>
               </p>
             </main>
         </div>
@@ -118,13 +118,13 @@
                     <li>Lorem, ipsum dolor.</li>
                     <li>Lorem, ipsum dolor.</li>
                   </ul>
-                  <button type="button" class="w-100 btn btn-lg btn-primary">Get started</button>
+                  <button type="button" class="w-100 btn btn-lg btn-outline-primary">Get started</button>
                 </div>
               </div>
             </div>
             <div class="col">
-              <div class="card mb-4 rounded-3 shadow-sm border-primary">
-                <div class="card-header py-3 text-white bg-primary border-primary">
+              <div class="card mb-4 rounded-3 shadow-sm ">
+                <div class="card-header py-3 ">
                   <h4 class="my-0 fw-normal">Owners</h4>
                 </div>
                 <div class="card-body">
@@ -135,7 +135,7 @@
                     <li>Lorem, ipsum dolor.</li>
                     <li>Lorem, ipsum dolor.</li>
                   </ul>
-                  <button type="button" class="w-100 btn btn-lg btn-primary">Contact us</button>
+                  <button type="button" class="w-100 btn btn-lg btn-outline-primary">Contact us</button>
                 </div>
               </div>
             </div>
