--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <nav class="navbar navbar-expand-lg py-3 sticky-top navbar-light bg-white">
         <div class="container">
             <a class="navbar-brand" href="#">
-                <img class="logo" src="img/logo-dark.svg" alt="">
+                <img class="logo" src="img/logo.png" alt="">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -505,7 +505,7 @@
             <div class="container">
                 <div class="row gy-4">
                     <div class="col-lg-4">
-                        <img class="logo" src="img/logo-white.svg" alt="">
+                        <img class="logo" src="img/logo-light.png" alt="">
                     </div>
                     <div class="col-lg-2">
                         <h5 class="text-white">Brand</h5>
