--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
                     <div class="team-member card-effect">
                         <img src="img/team4.jpg" alt="">
                         <h5 class="mb-0 mt-4">Sharbat Khan</h5>
-                        <p>Updater soska</p>
+                        <p>Updater</p>
                         <div class="social-icons">
                             <a href="#"><i class='bx bxl-facebook'></i></a>
                             <a href="#"><i class='bx bxl-twitter'></i></a>
